# x-dd

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  INSTALL.md  LICENSE  MEJORAS-X-DD.md  Makefile  NOTICE  PROJ-MASTER-PLAN.md  README.en.md  README.md  README.pt-BR.md  SECURITY.md  WORKING-CONTEXT.md  agent.yaml  commitlint.config.js  install.ps1  lecciones.md  memoria.md  pyproject.toml  requirements-dev.txt  the-longform-guide.md  the-security-guide.md  the-shortform-guide.md  xdd.config.yml  xdd.profile.yml
.claude/: settings.json
.devcontainer/: devcontainer.json  postCreate.sh
.github/: PULL_REQUEST_TEMPLATE.md  renovate.json
RELEASES/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.2.0.md
bundles/: security-bundle.xddbundle
docs/: AHE_EVOLVE.md  BRANDING.md  CHANGELOG.md  CONFIG.md  CONTEXT_ENGINEERING.md  EXTERNAL_BENCHMARKS.md  GATE.md  GUIA_CLAUDE_CODE_AGENTES_SKILLS_WORKFLOWS.md  GUIA_CODEX_AGENTES_SKILLS_WORKFLOWS.md  GUIA_OPENCODE_AGENTES_SKILLS_WORKFLOWS.md  GUIA_VSCODE_AGENTES_SKILLS_WORKFLOWS.md  GUIA_WINDSURF_AGENTES_SKILLS_WORKFLOWS.md  HOOKS.md  IDE_SETUP.md  INSTALL_PROFILES.md  INSTALL_VSCODE.md  MCP_INTEGRATION.md  MONOREPO.md  OBSERVABILITY.md  PENTEST.md  PERMISSIONS.md  RETROFIT_GUIDE.md  SANDBOXING.md  SDD_GUIDE.md  SKILLS_INTEROP.md  WORKSPACE.md  X-DD_Integration_Guide.md  constitucion.md  equipo.md  gitnexus-optin.md  modos.md
manifests/: install-components.json  install-modules.json  install-profiles.json
schemas/: hooks.schema.json  install-components.schema.json  install-modules.schema.json  install-profiles.schema.json  skills.schema.json  xdd.config.schema.json  xdd.profile.schema.json
scripts/: _xdd_common.py  generate-equipo.sh  lint-workflows.sh  migrate-agents-to-registry.py  validate-registry.py  xdd-a2a.py  (+35 more)
(+287 files in other folders)
